@startuml 类结构图
class GraphicsEngine {
  - HDC hdc
  - HWND hwnd
  - DrawMode currentMode
  - vector<Point2D> tempPoints
  - bool isDrawing
  
  + Initialize(hwnd, hdc)
  + SetMode(mode)
  + OnLButtonDown(x, y)
  + OnRButtonDown(x, y)
  + OnMouseMove(x, y)
  + DrawLineDDA(p1, p2, color)
  + DrawLineBresenham(p1, p2, color)
  + DrawCircleMidpoint(center, radius, color)
  + DrawCircleBresenham(center, radius, color)
  + DrawRectangle(p1, p2, color)
  + DrawPolyline(points, color)
  + DrawBSpline(controlPoints, color)
  + ScanlineFill(polygon, color)
  + BoundaryFill(x, y, fillColor, boundaryColor)
  + ClearCanvas()
}

enum DrawMode {
  MODE_NONE
  MODE_EXPR1
  MODE_LINE_DDA
  MODE_LINE_BRESENHAM
  MODE_CIRCLE_MIDPOINT
  MODE_CIRCLE_BRESENHAM
  MODE_RECTANGLE
  MODE_POLYLINE
  MODE_BSPLINE
  MODE_FILL_SCANLINE
  MODE_FILL_BOUNDARY
}

struct Point2D {
  + int x
  + int y
}

GraphicsEngine --> DrawMode
GraphicsEngine --> Point2D

@enduml
